--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,16 @@ body {
     gap: 15px;
 }
 
-.todo__title {
+button {
+  border: 1px solid rgb(105, 197, 255);
+  border-radius: 5px;
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
+  text-align: center;
+  padding: 5px;
+}
+
+.todo-title {
     display: flex;
     background-color: var(--secondary-color);
     width: 100%;
@@ -39,14 +48,14 @@ body {
     color: var(--primary-color);
 }
 
-.todo__list {
+.todo-list {
     display: flex;
     width: 100%;
     flex-direction: column;
     gap: 10px;
 }
 
-.todo__item{
+.todo-item{
     display: flex;
     width: 100%;
     height: 60px;
@@ -55,10 +64,10 @@ body {
     padding: 5px;
     box-shadow: 1px 1px 5px var(--secondary-color);
 }
-.todo__item > div {
+.todo-item > div {
     width: 80%;
 }
-.todo__item:hover {
+.todo-item:hover {
     cursor: pointer;
     transition: all .5s ease;
     background-color: var(--secondary-color);
@@ -66,25 +75,25 @@ body {
 }
 
 
-.todo__item > input[type='text'] {
+.todo-item > input[type='text'] {
     border: none;
     width: 80%;
     font: inherit;
 }
 
-.todo__item > input[type='button'],
-.todo__item > input[type='checkbox'] {
+.todo-item > input[type='button'],
+.todo-item > input[type='checkbox'] {
     width: 30px;
     height: 30px;
     font: inherit;
 }
 
 
-.todo__item > input[type='checkbox']:checked  + div {
+.todo-item > input[type='checkbox']:checked  + div {
     text-decoration:line-through;
 }
 
-.todo__new-item{
+.todo-new-item{
     display: flex;
     background-color: #fff59d;
     width: 100%;
@@ -96,7 +105,7 @@ body {
     font: inherit;
 }
 
-.todo__new-item > input{
+.todo-new-item > input{
     background-color: #fff59d;
     border: none;
     width: 80%;
@@ -104,7 +113,7 @@ body {
     font: inherit;
 }
 
-.todo__new-item > input::placeholder {
+.todo-new-item > input::placeholder {
     font-style: italic;
     font-weight: normal;
 }
