--- a/css/style.css
+++ b/css/style.css
@@ -1,110 +1,106 @@
-:root {
-    --primary-color: #F4CE01;
-    --secondary-color: #0F0F0B;
-}
-
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-html {
-    font-size: 62.5%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
-    background-color: var(--primary-color);
-    font: bold 2rem 'Open Sans', sans-serif;
+  height: 100vh;
+  background: linear-gradient(
+    90deg,
+    rgba(65, 184, 131, 1) 0%,
+    rgba(0, 212, 255, 1) 100%
+  );
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.todo {
-    display: flex;
-    width: 50vw;
-    flex-direction: column;
-    align-items: center;
-    margin: 0 auto;
-    gap: 15px;
+.container {
+  border: 2px solid #fff;
+  padding: 30px 40px;
+  width: 40%;
+  min-width: 500px;
+  justify-content: center;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.todo__title {
-    display: flex;
-    background-color: var(--secondary-color);
-    width: 100%;
-    height: 80px;
-    justify-content: center;
-    align-items: center;
-    margin-top: 50px;
-    box-shadow: 1px 1px 5px var(--secondary-color);
-    font-size: 3rem;
-    color: var(--primary-color);
+.new-task-container {
+  background-color: #fff;
+  padding: 30px 20px;
+  border-radius: 5px;
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
+  display: flex;
 }
 
-.todo__list {
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-    gap: 10px;
+.new-task-container input {
+  flex: 3;
+  font-size: 1rem;
+  border: 2px solid #d1d3d4;
+  border-radius: 5px;
+  padding: 12px;
+  font-weight: 500;
 }
 
-.todo__item{
-    display: flex;
-    width: 100%;
-    height: 60px;
-    justify-content: space-between;
-    align-items: center;
-    padding: 5px;
-    box-shadow: 1px 1px 5px var(--secondary-color);
-}
-.todo__item > div {
-    width: 80%;
-}
-.todo__item:hover {
-    cursor: pointer;
-    transition: all .5s ease;
-    background-color: var(--secondary-color);
-    color: var(--primary-color);
+.new-task-container input:focus {
+  outline: none;
+  border-color: #41b883;
 }
 
-
-.todo__item > input[type='text'] {
-    border: none;
-    width: 80%;
-    font: inherit;
+.new-task-button {
+  flex: 1;
+  border-radius: 5px;
+  font-weight: 500;
+  height: 100%;
+  font-size: 1rem;
+  border: none;
+  background-color: #41b883;
+  color: #fff;
+  padding: 12px;
+  margin-left: 12px;
+  cursor: pointer;
 }
 
-.todo__item > input[type='button'],
-.todo__item > input[type='checkbox'] {
-    width: 30px;
-    height: 30px;
-    font: inherit;
+.tasks-container {
+  background-color: #fff;
+  padding: 30px 20px;
+  margin-top: 60px;
+  border-radius: 10px;
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
+  width: 100%;
 }
 
-
-.todo__item > input[type='checkbox']:checked  + div {
-    text-decoration:line-through;
+.task-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 6px;
+  margin-top: 6px;
 }
 
-.todo__new-item{
-    display: flex;
-    background-color: #fff59d;
-    width: 100%;
-    height: 70px;
-    justify-content: space-evenly;
-    padding: 10px 0;
-    box-shadow: 1px 1px 5px var(--secondary-color);
-    margin: 10px;
-    font: inherit;
+.task-item i {
+  background-color: #41b883;
+  color: #fff;
+  padding: 12px;
+  border-radius: 5px;
 }
 
-.todo__new-item > input{
-    background-color: #fff59d;
-    border: none;
-    width: 80%;
-    outline: none;
-    font: inherit;
+.task-item i:hover {
+  cursor: pointer;
 }
 
-.todo__new-item > input::placeholder {
-    font-style: italic;
-    font-weight: normal;
+/* Utilities */
+.error {
+  border: 2px solid red !important;
+}
+
+.error::placeholder {
+  color: red;
+}
+
+.completed {
+  text-decoration: line-through;
 }
