--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 :root {
-    --primary-color: #F4CE01;
-    --secondary-color: #0F0F0B;
+    --primary-color: #46f401;
+    --secondary-color: #0f0b0b;
 }
 
 * {
